# dune-copasi

./: .clang-format  .clang-tidy  .codechecker.json  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  TODO.md  appveyor.yml  config.h.cmake  dune-copasi-config.cmake.in  dune-copasi.opts  dune-copasi.pc.in  dune.module
doc/: CMakeLists.txt  config.ini  config.ini.in  grid.geo  grid.msh  grid_coarse.msh  grid_fine.msh
doc/docusaurus/: .yarnrc  README.md  build.sh  docusaurus.config.js  fetchDoxygen.js  package.json  sidebars.js  versions.json
doc/doxygen/: CMakeLists.txt  Doxylocal
doc/joss/: README.md  paper.bib  paper.md
doc/man/: CMakeLists.txt  dune-copasi.1  dune-copasi.1.in
dune/copasi/: CMakeLists.txt  coefficient_mapper.hh  concepts.hh  copasi.hh  dynamic_local_basis.hh  dynamic_local_coefficients.hh  dynamic_local_finite_element.hh  dynamic_local_finite_element_map.hh  dynamic_local_interpolation.hh  enum.hh  gmsh_reader.hh  grid_function_writer.hh  local_operator.hh  local_operator_2.hh  local_operator_multidomain.hh  model_base.cc  model_base.hh  model_diffusion_reaction.cc  model_diffusion_reaction.hh  model_multidomain_diffusion_reaction.cc  model_multidomain_diffusion_reaction.hh  model_state.hh  modules.dox  multidomain_entity_transformation.hh  multidomain_local_finite_element_map.hh  muparser_data_handler.hh  pdelab_callable_adapter.hh  pdelab_expression_adapter.hh  tiff_grayscale.hh  util_meta.hh
lib/: CMakeLists.txt  dune_copasi_md.cc  dune_copasi_md.hh  dune_copasi_md_cg.cc  dune_copasi_md_fv.cc  dune_copasi_md_fv_cg.cc  dune_copasi_md_fv_cg.cc.orig  dune_copasi_sd.cc  dune_copasi_sd.hh  dune_copasi_sd_cg.cc  dune_copasi_sd_fv.cc  dune_copasi_sd_fv_cg.cc  model_multidomain_diffusion_reaction.cc  multidomain_diffusion_reaction.cc
notebooks/: CMakeLists.txt  single-domain.ipynb
src/: CMakeLists.txt  config_opts.hh.in  config_opts.json  dune-copasi.cc  dune_copasi.cc  dune_copasi_md.cc  dune_copasi_sd.cc
src/dune/: CMakeLists.txt
src/options/: compartments.{cmp}.[expression|parser_type]  compartments.{cmp}.[type|gmsh_id|expression|parser_type]  compartments.{cmp}.[type|id|expression|parser_type]  compartments.{cmp}.expression  compartments.{cmp}.id  grid.[dimension|path|cells|extensions|origin|refinement_level]  grid.[dimension|path|cells|extensions|origin|refinement_level|axis_names]  grid.cells  grid.dimension  grid.extensions  grid.file  grid.griddata.{tkn}.[type|path]  grid.origin  grid.refinement_level  model.[order|is_linear|parser_type]  model.assembly.[type|partition.type|partition.patches|partition.coloring]  model.blocked_layout.[compartments|scalar_fields]  model.order  model.scalar_field.{var}.[initial|reaction|storage|velocity.[x|y|z]|outflow.{cmp}].[expression|parser_type]  model.scalar_field.{var}.[initial|reaction|storage|velocity.[x|y|z]|outflow.{cmp}].jacobian.{wrt}.[expression|parser_type]  model.scalar_field.{var}.[reaction|storage|flux.[x|y|z]|outflow.{cmp}].jacobian.{wrt}.[expression|parser_type]  model.scalar_field.{var}.[reaction|storage|flux.[x|y|z]|outflow.{cmp}|initial].[expression|parser_type]  model.scalar_field.{var}.[reaction|storage|velocity.[x|y|z]|outflow.{cmp}|initial].[expression|parser_type]  model.scalar_field.{var}.compartment  model.scalar_field.{var}.constrain.[boundary|skeleton|volume].[expression|parser_type]  model.scalar_field.{var}.cross_diffusion.{dwrt}.jacobian.type  model.scalar_field.{var}.cross_diffusion.{dwrt}.jacobian[.xx|.xy|.xz|.yx|.yy|.yz|.zx|.zy|.zz].{wrt}.[expression|parser_type]  model.scalar_field.{var}.cross_diffusion.{dwrt}.jacobian[.xx|xy|xz|yx|yy|yz|zx|zy|zz].{wrt}.[expression|parser_type]  model.scalar_field.{var}.cross_diffusion.{dwrt}.type  model.scalar_field.{var}.cross_diffusion.{dwrt}[.xx|.xy|.xz|.yx|.yy|.yz|.zx|.zy|.zz].[expression|parser_type]  model.scalar_field.{var}.reaction.expression  model.time_step_operator.linear_solver.[type|verbosity|matrix_free|restart]  model.time_step_operator.linear_solver.convergence_condition.[relative_tolerance|iteration_range]  model.time_step_operator.linear_solver.layout.writer.svg.path  model.time_step_operator.matrix_free  model.time_step_operator.nonlinear_solver.[norm|linearization_threshold|dx_inverse_fixed_tolerance|dx_inverse_min_relative_tolerance]  model.time_step_operator.nonlinear_solver.convergence_condition.[relative_tolerance|absolute_tolerance|iteration_range]  model.time_step_operator.time_[begin|end]  model.time_step_operator.time_begin  model.time_step_operator.time_end  (+32 more)
test/: CMakeLists.txt  NFKappaB.mini  README.md  default_time_stepping.ini  disk.ini  dune_copasi_md_compare.cc  dune_copasi_sd_compare.cc  dynamic_local_finite_element.cc  exp.ini  gauss.ini  grid_function_compare.hh  logging.ini  mitchell_schaefer.ini  poisson.ini  test_NFkappaB.mini  test_bidomain_fhn_interface.ini  test_bidomain_fhn_volume.ini  test_brusselator.mini  test_cell.mini  test_compartment_BR.ini  test_concepts_grid.cc  test_concepts_pdelab.cc  test_concepts_typetree.cc  test_dynamic_local_finite_element.cc  test_dynamic_power_local_finite_element.cc  test_exp.ini  test_exp.mini  test_fisher_kpp.ini  test_gauss.ini  test_gauss.mini  test_gauss_mixed_geometry.mini  test_gray_scott.ini  test_in_out.mini  test_initial.mini  test_jacobian.cc  test_jacobian.mini  test_liver.mini  test_membrane.mini  test_mitchell_schaefer.ini  test_monodomain_fhn.ini  (+13 more)
test/grids/: circle.msh  square.geo  square_cubes.geo  square_cubes.msh  square_mixed_geometry.geo  square_mixed_geometry.msh  square_triangles.msh  test_cell.geo  test_cell_coarse.msh  test_cell_membrane.geo  test_cell_membrane.msh  test_cell_membrane_2.msh  test_cell_sphere.geo  test_cell_sphere.msh  test_cell_sphere_refined.msh
test/reference/: cell-00004.vtu  cell-00005.vtu  nucleoid-00004.vtu  nucleoid-00005.vtu  nucleus-00005.vtu  test_exp-00101.vtu  test_tiff-00000.vtu
test/test_griddata/: disk_analytical.ini  disk_griddata.ini  script_datafile.py  (+1 more)
(+394 files in other folders)
